--- a/Informacion.html
+++ b/Informacion.html
@@ -13,6 +13,7 @@
             <td>
                 <img id="favi" width="50px" src="Favicon.png" alt="">
                 <center><h1>JL VIAJES</h1> </center>
+                <a id="form" href="./form.html"><i class="fa-solid fa-user"></i></a>
             </td>
         </tr>
     </table>
@@ -39,5 +40,7 @@
     <a href="index.html">Inicio</a>
 
    </main>
+   <script src="https://kit.fontawesome.com/90ac4b5e66.js" crossorigin="anonymous"></script>
+
 </body>
 </html>
