--- a/imagenes.html
+++ b/imagenes.html
@@ -13,6 +13,7 @@
             <td>
                 <img id="favi" width="50px" src="Favicon.png" alt="">
                 <center><h1>JL VIAJES</h1> </center>
+                <a id="form" href="./form.html"><i class="fa-solid fa-user"></i></a>
             </td>
         </tr>
     </table>
@@ -47,5 +48,7 @@
    <main>
     <a href="index.html">Inicio</a>
    </main>
+   <script src="https://kit.fontawesome.com/90ac4b5e66.js" crossorigin="anonymous"></script>
+
 </body>
 </html>
