--- a/promocion.html
+++ b/promocion.html
@@ -24,7 +24,7 @@
             <img class="fotos" src="./fotos/alemania.jpeg" alt="img1">
             <center>
                 <h2>ALEMANIA</h2>
-                <a class="vm" href=""><font size="5">Ver mas</font></a>
+                <a class="vm" href="serv.html"><font size="5">Ver mas</font></a>
             </center>
             <!-- <h4><font size="4">Opcion 1:</font></h4>
             <h4>Fecha: 21 de Marzo 2025</h4>
@@ -50,7 +50,7 @@
             <img class="fotos" src="./fotos/koreanore.jpeg" alt="img1">
             <center>
                 <h2>KOREA</h2>
-                <a class="vm" href=""><font size="5">Ver mas</font></a>
+                <a class="vm" href="serv.html"><font size="5">Ver mas</font></a>
             </center>
 
             <!-- <h4><font size="4">Opcion 1:</font></h4>
@@ -76,7 +76,7 @@
             <img class="fotos" src="./fotos/egipo.jpeg" alt="img1">
             <center>     
                 <h2>EGIPTO</h2>
-                <a class="vm" href=""><font size="5">Ver mas</font></a>
+                <a class="vm" href="serv.html"><font size="5">Ver mas</font></a>
             </center>
             <!-- <h4><font size="4">Opcion 1:</font></h4>
             <h4>Fecha: 21 de Marzo 2025</h4>
@@ -102,7 +102,7 @@
             
             <center>
                 <h2>URUGUAY</h2>
-                <a class="vm" href=""><font size="5">Ver mas</font></a>
+                <a class="vm" href="serv.html"><font size="5">Ver mas</font></a>
             </center>
             <!-- <h4><font size="4">Opcion 1:</font></h4>
             <h4>Fecha: 21 de Marzo 2025</h4>
@@ -127,7 +127,7 @@
             <img class="fotos" src="./fotos/tokio-japon-1.jpg" alt="img1">
             <center>
                 <h2>JAPON</h2>
-                <a class="vm" href=""><font size="5">Ver mas</font></a>
+                <a class="vm" href="serv.html"><font size="5">Ver mas</font></a>
             </center>
             <!-- <h4><font size="4">Opcion 1:</font></h4>
             <h4>Fecha: 21 de Marzo 2025</h4>
@@ -152,7 +152,7 @@
             <img class="fotos" src="./fotos/vieje paris.jpg" alt="img1">
             <center>
                 <h2>FRANCIA</h2>
-                <a class="vm" href=""><font size="5">Ver mas</font></a>
+                <a class="vm" href="serv.html"><font size="5">Ver mas</font></a>
             </center>
 
             <!-- <h4><font size="4">Opcion 1:</font></h4>
