--- a/Informacion.html
+++ b/Informacion.html
@@ -33,8 +33,8 @@
             <li>Asesoramiento: ¿Necesitas ayuda para elegir tu próximo destino? Estamos aquí para guiarte.</li>
             <h2>Contactanos</h2>
             <li>Dirección: Av. Uruguay 123, Montevideo</li>
-            <li>Teléfono: +598 098 765 432</li>
-            <li>Correo electrónico: reservas@jlviajes.com.uy</li>
+            <li>Teléfono: +598 091 234 567</li>
+            <li>Correo electrónico: jlviajes1999@gmail.com</li>
         </div>
         
     <a href="index.html">Inicio</a>
