--- a/form.html
+++ b/form.html
@@ -23,12 +23,10 @@
             
                 <h1>Formulario de conformidad</h1>
                 <br>
-                <p class="pin">Nombre </p>
+                <p class="pin">Comentario</p>
                 <input class="input" type="text" size="20">
-                <p class="pin">Apellido </p>
-                <input class="input" type="text" size="20">
-                <p class="pin">Email</p>
-                <input class="input" type="text" size="20">
+                <p class="pin">¿Esta conforme con el servicio?</p>
+                <input class="input ch"  type="checkbox" size="20">
                 <br> 
                 
                 <div id="botones">
