--- a/serv.html
+++ b/serv.html
@@ -3,6 +3,7 @@
 <head id="head">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="promocion.css">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="Favicon.png" type="image/x-icon">
 </head>
@@ -17,7 +18,7 @@
         </tr>
     </table>
     <main id="main">
-
+        
     </main>
     <script src="./js/main.js"></script>
 </body>
