--- a/serv.html
+++ b/serv.html
@@ -20,6 +20,6 @@
     <main id="main">
         
     </main>
-    <script src="./js/main.js"></script>
+    <script src="./js/serv.js"></script>
 </body>
 </html>
