--- a/form.html
+++ b/form.html
@@ -11,7 +11,7 @@
     <table width="100%">
         <tr>
             <td>
-                <img id="favi" width="50px" src="Favicon.png" alt="">
+                <a href="index.html"><img id="favi" width="50px" src="Favicon.png" alt=""></a>
                 <center><h1>JL VIAJES</h1> </center>
                 
             </td>
