--- a/serv.html
+++ b/serv.html
@@ -11,7 +11,7 @@
     <table width="100%">
         <tr>
             <td>
-                <img id="favi" width="50px" src="Favicon.png" alt="">
+                <a href="index.html"><img id="favi" width="50px" src="Favicon.png" alt=""></a>
                 <center><h1>JL VIAJES</h1> </center>
                 <a id="form" href="./form.html"><i class="fa-solid fa-user"></i></a>
             </td>
@@ -20,6 +20,8 @@
     <main id="main">
         
     </main>
+    <script src="https://kit.fontawesome.com/90ac4b5e66.js" crossorigin="anonymous"></script>
+
     <script src="./js/serv.js"></script>
 </body>
 </html>
