--- a/serv.html
+++ b/serv.html
@@ -22,6 +22,6 @@
     </main>
     <script src="https://kit.fontawesome.com/90ac4b5e66.js" crossorigin="anonymous"></script>
 
-    <script src="./js/serv.js"></script>
+    <script type="module" src="./js/serv.js"></script>
 </body>
 </html>
