--- a/imagenes.html
+++ b/imagenes.html
@@ -11,15 +11,14 @@
     <table class="" width="100%">
         <tr>
             <td>
-                <a href="index.html"><img id="favi" width="50px" src="Favicon.png" alt=""></a>
+                <a id="btnIn" href="index.html"><img id="favi" width="50px" src="Favicon.png" alt=""></a>
                 <center><h1>JL VIAJES</h1> </center>
-                <a id="form" href="./form.html"><i class="fa-solid fa-user"></i></a>
             </td>
         </tr>
     </table>
     <center>
         <div class="lugares">
-            <h3>Meseta de artigas</h3>
+            <h3>Meseta de Artigas</h3>
             <img class="fotos" src="./fotos/descarga (3).jpeg" alt="img1">
         </div>
 
