--- a/promocion.html
+++ b/promocion.html
@@ -11,9 +11,8 @@
     <table width="100%">
         <tr>
             <td>
-                <a href="index.html"><img id="favi" width="50px" src="Favicon.png" alt=""></a>
+                <a id="btnIn" href="index.html"><img id="favi" width="50px" src="Favicon.png" alt=""></a>
                 <center><h1>JL VIAJES</h1> </center>
-                <a id="form" href="./form.html"><i class="fa-solid fa-user"></i></a>
             </td>
         </tr>
     </table>
@@ -23,7 +22,7 @@
             <img class="fotos" src="./fotos/alemania.jpeg" alt="img1">
             <center>
                 <h2>ALEMANIA</h2>
-                <a class="vm" id="al" href="serv.html"><font size="5">Ver mas</font></a>
+                <a class="vm" id="al" href="serv.html"><font size="5">Ver más</font></a>
             </center>
         </div>
 
@@ -32,21 +31,21 @@
             <img class="fotos" src="./fotos/koreanore.jpeg" alt="img1">
             <center>
                 <h2>KOREA</h2>
-                <a class="vm" id="ko" href="serv.html"><font size="5">Ver mas</font></a>
+                <a class="vm" id="ko" href="serv.html"><font size="5">Ver más</font></a>
             </center>
         </div>
         <div class="prom">
             <img class="fotos" src="./fotos/Cherno.jpeg" alt="img1">
             <center>     
                 <h2>Ucrania</h2>
-                <a class="vm" id="uc" href="serv.html"><font size="5">Ver mas</font></a>
+                <a class="vm" id="uc" href="serv.html"><font size="5">Ver más</font></a>
             </center>
         </div>
         <div class="prom">
             <img class="fotos" src="./fotos/Japon.jpeg" alt="img1">
             <center>
                 <h2>Japón</h2>
-                <a class="vm" id="ja" href="serv.html"><font size="5">Ver mas</font></a>
+                <a class="vm" id="ja" href="serv.html"><font size="5">Ver más</font></a>
             </center>
         </div>
         <div class="prom">
@@ -54,7 +53,7 @@
             <img class="fotos" src="./fotos/Pompeya.jpeg" alt="img1">
             <center>
                 <h2>Italia</h2>
-                <a class="vm" id="it" href="serv.html"><font size="5">Ver mas</font></a>
+                <a class="vm" id="it" href="serv.html"><font size="5">Ver más</font></a>
             </center>
             
         </div>
@@ -63,12 +62,12 @@
             <img class="fotos" src="./fotos/SalSiPuedes.jpeg" alt="img1">
             <center>
                 <h2>Uruguay</h2>
-                <a class="vm" id="ur" href="serv.html"><font size="5">Ver mas</font></a>
+                <a class="vm" id="ur" href="serv.html"><font size="5">Ver más</font></a>
             </center>
         </div>
    
     </center>
-<!-- </marquee> -->
+        <a href="form.html">Formulario de conformidad</a>
         <a href="./index.html">Inicio</a>
    </main>
    <script src="./js/main.js"></script>
