--- a/Informacion.html
+++ b/Informacion.html
@@ -11,9 +11,8 @@
     <table width="100%">
         <tr>
             <td>
-                <a href="index.html"><img id="favi" width="50px" src="Favicon.png" alt=""></a>
+                <a id="btnIn" href="index.html"><img id="favi" width="50px" src="Favicon.png" alt=""></a>
                 <center><h1>JL VIAJES</h1> </center>
-                <a id="form" href="./form.html"><i class="fa-solid fa-user"></i></a>
             </td>
         </tr>
     </table>
