--- a/form.html
+++ b/form.html
@@ -36,11 +36,8 @@
            
         </form>
                 
-        <a href="index.html">Inicio</a>
+        <a href="promocion.html">Atras</a>
     </center>
-   
-    <!-- <marquee behavior="alternate" direction="top"><img src="./Favicon.png" alt=""></marquee> -->
-
    </main>
 </body>
 </html>
