--- a/form.html
+++ b/form.html
@@ -36,7 +36,7 @@
            
         </form>
                 
-        <a href="promocion.html">Atras</a>
+        <a href="promocion.html">Atrás</a>
     </center>
    </main>
 </body>
